# Open-Platform-Engineering

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  maven_install.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
core/src/main/java/codes/showme/domain/account/: Account.java  AccountProfile.java  AccountRepository.java  AccountSignUpEvent.java  BUILD.bazel
core/src/main/java/codes/showme/domain/escalation/: BUILD.bazel  EscalationPolicy.java  EscalationPolicyRepository.java  EscalationRule.java  EscalationRuleSet.java  EscalationScheduleTarget.java  EscalationTarget.java  EscalationUserTarget.java  HandoffNotificationPolicy.java
core/src/main/java/codes/showme/domain/incident/: BUILD.bazel  Incident.java  IncidentAcknowledgeEvent.java  IncidentEvent.java  IncidentEventSourceType.java  IncidentPriority.java  IncidentRepository.java  IncidentResolveEvent.java  IncidentStatus.java  IncidentTimeline.java
core/src/main/java/codes/showme/domain/notification/: AlertNotificationPreference.java  BUILD.bazel  NotifiedUser.java  NotifiedUserExample.java
core/src/main/java/codes/showme/domain/observability/: BUILD.bazel  Runbook.java
core/src/main/java/codes/showme/domain/platform/: AlertAction.java  BUILD.bazel  BusinessServices.java  MaintenanceWindows.java  NotificationUrgencyStrategy.java  SampleServiceEvent.java  Service.java  ServiceEvent.java  ServiceEventType.java  ServiceIntegration.java  ServiceIntegrationType.java  ServiceMaintenanceWindows.java  ServiceRepository.java  ServiceStatus.java  SupportHour.java  SupportHourType.java  Ticket.java  TicketPriority.java  TicketRepository.java  TicketStatus.java  Tier.java
core/src/main/java/codes/showme/domain/schedule/: BUILD.bazel  CustomRotation.java  DailyRestriction.java  DailyRotation.java  FinalSchedule.java  Restriction.java  RestrictionType.java  RotationType.java  ScheduleLayer.java  ScheduleLayers.java  ScheduleRule.java  ScheduleRuleRepository.java  TimeRangeShift.java  WeeklyRestriction.java  WeeklyRotation.java
core/src/main/java/codes/showme/domain/team/: Account.java  AccountProfile.java  AccountRepository.java  AccountSignUpEvent.java  BUILD.bazel  Reassignable.java  Team.java  TeamRepository.java
core/src/test/java/codes/showme/domain/escalation/: BUILD.bazel  EscalationPolicyTest.java  EscalationRuleTest.java
core/src/test/java/codes/showme/domain/observability/: AbstractIntegrationTest.java  BUILD.bazel
core/src/test/java/codes/showme/domain/schedule/: BUILD.bazel  CustomRotationTest.java  DailyRestrictionTest.java  DailyRotationTypeTest.java  GuavaRangeTest.java  ScheduleLayerTest.java  ScheduleTest.java  ScheduleTestHelper.java  WeeklyRestrictionTest.java  WeeklyRotationTest.java
environments/test/npm/: BUILD.bazel  package.json
event-impl/src/main/java/codes/showme/domain/account/: AccountSignUpEventImpl.java  BUILD.bazel
repository-impl/src/main/java/codes/showme/domain/account/: AccountRepositoryImpl.java  BUILD.bazel
repository-impl/src/main/java/codes/showme/domain/escalation/: BUILD.bazel  EscalationPolicyRepositoryImpl.java
repository-impl/src/main/java/codes/showme/domain/incident/: BUILD.bazel  IncidentRepositoryImpl.java
repository-impl/src/main/java/codes/showme/domain/platform/: BUILD.bazel  ServiceRepositoryImpl.java  TicketRepositoryImpl.java
repository-impl/src/main/java/codes/showme/domain/repository/: BUILD.bazel  EbeanConfig.java  ReadonlyDbConfig.java  WriteonlyDbConfig.java
repository-impl/src/main/sql/: .sqlfluff  BUILD.bazel  README.md  sql_test.py
repository-impl/src/main/sql/dbinit/: 1.0__initial.sql  1.1.sql  1.3.sql
repository-impl/src/main/sql/domain/: 1.1.sql  1.2.sql  1.3.sql  1.4.sql
repository-impl/src/main/sql/domain/model/: BUILD.bazel
repository-impl/src/test/java/codes/showme/domain/: AbstractIntegrationTest.java  BUILD.bazel  def.bzl
repository-impl/src/test/java/codes/showme/domain/account/: AccountIntegrationTest.java  BUILD.bazel
repository-impl/src/test/java/codes/showme/domain/escalation/: BUILD.bazel  EscalationPolicyIntegrationTest.java
repository-impl/src/test/java/codes/showme/domain/incident/: BUILD.bazel  IncidentRepositoryTest.java
repository-impl/src/test/java/codes/showme/domain/platform/: BUILD.bazel  ServiceRepositoryImplTest.java
repository-impl/src/test/java/codes/showme/domain/schedule/: BUILD.bazel  ScheduleIntegrationTest.java
repository-impl/src/test/java/codes/showme/domain/tenant/: BUILD.bazel  TenantRepositoryImplTest.java
server/src/main/java/codes/showme/server/: BUILD.bazel  GlobalConfig.java  GlobalExceptionHandler.java  GlobalWebMvcConfigurer.java  HelloController.java  IndexController.java  Main.java  def.bzl
server/src/main/java/codes/showme/server/account/: AccountController.java  BUILD.bazel  (+3 more)
server/src/test/java/codes/showme/server/: AbstractIntegrationTest.java  BUILD.bazel  TestConfiguration.java
spring-ioc-impl/: BUILD.bazel
tech-lib/: BUILD.bazel
tools/rules_ebean/: BUILD.bazel  rules.bzl
tools/rules_ebean/src/: BUILD.bazel
tools/rules_ebean/src/main/java/internal/: BUILD.bazel  DdlGeneratorCommand.java
tools/rules_hibernate/: BUILD.bazel  rules.bzl
tools/rules_hibernate/internal/: SchemaGeneratorCommand.java
web-ui/: BUILD.bazel  package.json  postcss.config.js  tailwind.config.js  webpack.bazel.config.js
web-ui/public/: index.html
web-ui/src/: AccountContext.jsx  AwsConfigContext.jsx  index.jsx
web-ui/src/components/: AwsCognito.jsx  Faq.jsx  FirstSection.jsx  Footer.jsx  Hero.jsx  Nav.jsx  SecondSection.jsx  Testimonial.jsx
web-ui/src/pages/: EmailValidation.jsx  ForgetPassword.jsx  Home.jsx  SignIn.jsx  SignUp.jsx
web-ui/src/routes/: Root.jsx
web_ui_htmx_flask/: BUILD.bazel  app.py  zoneid.py
web_ui_htmx_flask/templates/: base.html  email-validation.html  index.html  nav.html  sign-in.html  sign-up.html
web_ui_htmx_flask/templates/schedules/: create.html  edit.html  index.html  teamsSearch.html
web_ui_htmx_flask/templates/services/: index.html
web_ui_htmx_flask/templates/teams/: create.html  index.html
(+151 files in other folders)
