load("@pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary","py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "todo",
    srcs = glob(["todo.py"]),
    deps = [
    ],
)

py_binary(
  name = "app",
  srcs = ["app.py"],
  data = glob([
#      "static/src/*.js",
      "templates/*.html"]
    ),
  deps = [
      ":todo",
      requirement("Flask"),
#      requirement("Flask_Assets"),
#      requirement("webassets"),
#      requirement("pytailwindcss"),
      requirement("itsdangerous"),
      requirement("requests"),
      requirement("urllib3"),
      requirement("certifi"),
      requirement("idna"),
      requirement("charset-normalizer"),
  ]
)
