load("@pip_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary","py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "zoneid",
    srcs = ["zoneid.py"],
    deps = [],
)


py_binary(
  name = "app",
  srcs = glob(["app.py"]),
  data = glob([
#      "static/src/*.js",
      "templates/**/*.html"]
    ),
  deps = [
      ":zoneid",
      requirement("Flask"),
      requirement("itsdangerous"),
      requirement("requests"),
      requirement("urllib3"),
      requirement("certifi"),
      requirement("idna"),
      requirement("charset-normalizer"),
  ]
)
