load("//tools/rules_ebean:rules.bzl","ebean_ddl")

#ebean_ddl(
#    name="incident",
#    entity_lib = "//core/src/main/java/codes/showme/domain/incident:incident",
#    packages = ["codes.showme.domain"],
#    migration_sql = "//repository-impl/src/main/sql:migrations",
#    migration_model = "//repository-impl/src/main/sql/model:migrations",
#    ebean_agent = "@ebean_agent//jar"
#)
