package(default_visibility = ["//visibility:public"])
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_js//js:defs.bzl", "js_library")

load("@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl", "jsonnet_to_json")



js_library(
    name = "npm",
    srcs = [
        "package.json",
    ],
    data =["//environments/test:aws"],
)
