package(default_visibility = ["//visibility:public"])

genrule(
    name='ebean-agent',
    outs=['ebean-agent.jar'],
    srcs=['@ebean_agent//jar'],
    cmd='cp $(location @ebean_agent//jar) $@',
)

java_binary(
    name = "ebean_ddl",
    main_class = "internal.DdlGeneratorCommand",
    srcs = ["//tools/rules_ebean/src/main/java/internal:DdlGeneratorCommand.java"],
    resources = ["//tools/rules_ebean/src/META-INF/services:ebean_spi"],
    data = ["@ebean_agent//jar"],
    jvm_flags = ["-javaagent:$(location @ebean_agent//jar)"],
    deps =   [
        "//core/src/main/java/codes/showme/domain/incident",
        "//core/src/main/java/codes/showme/domain/platform",
        "//core/src/main/java/codes/showme/domain/escalation",
        "//core/src/main/java/codes/showme/domain/schedule",
        "//core/src/main/java/codes/showme/domain/platform/scheduledaction",
        "//core/src/main/java/codes/showme/domain/team:team",
        "//core/src/main/java/codes/showme/domain/tenant",
        "//third_party:repository",
        "//third_party:db_migration",
        "//third_party:test_container",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_datatype_jackson_datatype_jsr310",
        "@maven//:io_ebean_ebean_agent",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:commons_cli_commons_cli",


    ],
        visibility = ["//visibility:public"],

)