package(default_visibility = ["//visibility:public"])

java_binary(
    name = "ebean_ddl",
    main_class = "internal.DdlGeneratorCommand",
    srcs = ["//tools/rules_ebean/src/main/java/internal:DdlGeneratorCommand.java"],
    resources = ["//tools/rules_ebean/src/META-INF/services:ebean_spi", "//tools/rules_ebean/src:logback.xml"],
    data = ["@maven//:io_ebean_ebean_agent"],
    jvm_flags = ["-javaagent:$(location @maven//:io_ebean_ebean_agent)"],
    deps =   [
        "//core/src/main/java/codes/showme/domain/incident",
        "//core/src/main/java/codes/showme/domain/platform",
        "//core/src/main/java/codes/showme/domain/escalation",
        "//core/src/main/java/codes/showme/domain/schedule",
        "//core/src/main/java/codes/showme/domain/platform/scheduledaction",
        "//core/src/main/java/codes/showme/domain/team:team",
        "//core/src/main/java/codes/showme/domain/tenant",
        "//third_party:repository",
        "//third_party:db_migration",
        "//third_party:test_container",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_datatype_jackson_datatype_jsr310",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:commons_cli_commons_cli",
    ],
)