#load( "@io_bazel_rules_docker//container:container.bzl","container_image")

#load("@aspect_bazel_lib//lib:tar.bzl", "tar")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("//server/src/main/java/codes/showme/server:def.bzl","resources","common_deps")
package(default_visibility = ["//visibility:public"])

java_library(
    name = "lib",
    srcs = glob(["*.java"]),
    deps = common_deps,
)

java_binary(
    name = "app",
    main_class = "codes.showme.server.Main",
    resources = resources,
    runtime_deps = [
        ":lib",
    ],
)



#tar(
#    name = "layer",
#    srcs = ["app_deploy.jar"],
#)


oci_image(
    name = "java_image",
    base = "@distroless_java",
    entrypoint = [
        "java",
        "-jar",
        "app_deploy.jar",
    ],
#    tars = [":layer"],
)

#container_image(
#    name = "nginx",
#    base = "@nginx//image",
#    user = "nonroot",
#)

