
package(default_visibility = ["//visibility:public"])


java_library(
    name = "abstractIntegrationTest",
    srcs = glob(["*.java"]),
    testonly = True,
    resources = [
        "//repository-impl/src/main/sql/domain:migrations",
        "//repository-impl/src/main/sql/domain/model:migrations"
    ],
    deps = [
        "//core/src/main/java/codes/showme/domain/team",
        "//tech-lib:ioc",
        "//tech-lib:email",
        "//tech-lib:cache",
        "//tech-lib:validation",
        "//tech-lib-impl/src/main/java/codes/showme/techlib/cache:CacheServiceMockImpl",
        "//tech-lib-impl/src/main/java/codes/showme/techlib/email:EmailSenderMockImpl",
        "//event-impl/src/main/java/codes/showme/domain/account:AccountSignUpEvent",
        "//tech-lib-impl/src/main/java/codes/showme/techlib/validation:ValidationCodeGeneration",
        "//third_party:unittest",
        "//third_party:repository",
        "//third_party:db_migration",
        "//third_party:test_container",
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_datatype_jackson_datatype_jsr310",
    ],
)

