package(default_visibility = ["//visibility:public"])

java_library(
    name = "IncidentRepositoryImpl",
    srcs = ["IncidentRepositoryImpl.java"],
    deps = [
        "//third_party:repository",
        "//repository-impl/src/main/java/codes/showme/domain/repository:ebean_config",
        "//core/src/main/java/codes/showme/domain/incident:incident",
        "//tech-lib:ioc-instance-factory",
    ],
)