package(default_visibility = ["//visibility:public"])

java_library(
    name = "ServiceRepositoryImpl",
    srcs = ["ServiceRepositoryImpl.java"],
    deps = [
        "//third_party:repository",
        "//repository-impl/src/main/java/codes/showme/domain/repository:ebean_config",
        "//tech-lib:ioc",
        "//core/src/main/java/codes/showme/domain/platform:platform",
    ],
)
java_library(
    name = "TicketRepositoryImpl",
    srcs = ["TicketRepositoryImpl.java"],
    deps = [
        "//third_party:repository",
        "//repository-impl/src/main/java/codes/showme/domain/repository:ebean_config",
        "//tech-lib:ioc",
        "//core/src/main/java/codes/showme/domain/platform:platform",
    ],
)