package(default_visibility = ["//visibility:public"])

java_library(
    name = "ebean_config",
    srcs = glob(["*.java"]),
#    resources = [],
    deps = [
        "@maven//:jakarta_persistence_jakarta_persistence_api",
        "@maven//:org_springframework_spring_context",
        "@maven//:org_springframework_spring_beans",
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:io_ebean_ebean_api",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:com_zaxxer_HikariCP",
        "@maven//:com_google_guava_guava",
        "@maven//:com_fasterxml_jackson_datatype_jackson_datatype_jsr310",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
    ],
)

